supertask solution and result added
